# roseline.rs

./: .gitignore  .travis.yml  Cargo.toml  Procfile  README.md  roseline.toml
actors/: Cargo.toml
actors/src/: db.rs  exec.rs  lib.rs  vndb.rs
bot/: Cargo.toml
bot/src/: config.rs  discord.rs  handler.rs  irc.rs  main.rs
bot/src/command/: args.rs  mod.rs
bot/src/handlers/: mod.rs
ci/: before_deploy.sh  install.sh  script.sh
db/: Cargo.toml
db/src/: lib.rs  models.rs
http/: Cargo.toml
http/src/: kouryaku.rs  lib.rs
launcher/: Cargo.toml
launcher/src/: main.rs
src/: config.rs  log.rs  main.rs  utils.rs  vndb.rs
src/db/: mod.rs  models.rs  schema.rs
src/handlers/: args.rs  command.rs  mod.rs
utils/: Cargo.toml
utils/src/: duration.rs  lib.rs  log.rs  ssl.rs
vndb/: Cargo.toml
vndb/src/: lib.rs
web/: Cargo.toml
web/front/: .gitignore  package.json  postcss.config.js  webpack.config.js
web/front/src/: main.js
web/front/src/styles/: common.css  common.sss  main.css  main.sss  search.css  search.sss
web/front/src/templates/: _common.pug  index.pug
web/src/: main.rs  templates.rs
web/src/server/: actors.rs  error_rsp.rs  middleware.rs  mod.rs  statics.rs
web/src/server/actors/: db.rs  mod.rs  vndb.rs
web/static/: app.bundle.css  app.bundle.css.map  app.bundle.js  app.bundle.js.map  index.html  main.css
web/templates/: 404.html  500.html  _base.html  about.html  add_hook.html  index.html  search.html  vn.html  vndb_results.html
