[package]
name = "actors"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies.db]
path = "../db"

[dependencies]
tokio-core = "0"
tokio-io = "0"
tokio-tls = "0"
futures = "0"

slog-scope = "4"

vndb = "0"

native-tls = "0"
trust-dns-resolver = "0"

actix = "0"

[dependencies.log]
version = "0"
default-features = false
features = ["max_level_info", "release_max_level_warn"]

[dependencies.slog]
version = "2"
default-features = false
features = ["max_level_trace", "release_max_level_info"]
