[package]
name = "actors"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies.db]
path = "../db"

[dependencies]
tokio-core = "0.1"
tokio-io = "0.1"
tokio-tls = "0.1"
futures = "0.1"

slog-scope = "4"

actix = "0"

[dependencies.vndb]
version = "0.5"
default-features = false
features = ["tokio-client"]

[dependencies.log]
version = "0"
default-features = false
features = ["max_level_info", "release_max_level_warn"]

[dependencies.slog]
version = "2"
default-features = false
features = ["max_level_trace", "release_max_level_info"]
