[package]
name = "actors"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies.db]
path = "../db"

[dependencies]
tokio-core = "0.1"
tokio-io = "0.1"
tokio-tls = "0.1"
futures = "0.1"

actix = "0.7"

[dependencies.vndb]
version = "0.5"
default-features = false
features = ["tokio-client"]

[dependencies.log]
version = "0"
default-features = false
