[package]
name = "roseline"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
license = "Apache-2.0"
readme = "README.md"

[dependencies.actors]
path = "../actors"

[dependencies.utils]
path = "../utils"

[dependencies]
tokio = "0.1"
vndb = "0.6"

actix = "0.7"
futures = "0.1"

lazy_static = "1"
regex = "0"

typemap = "0"

[dependencies.serenity]
default-features = false
features = ["cache", "framework", "gateway", "standard_framework"]
version = "0.5"

[dependencies.irc]
# TODO: wait for stable version
git = "https://github.com/aatxe/irc"
branch = "0.14"
default-features = false
features = ["ctcp", "toml"]

[dependencies.log]
version = "0"
default-features = false
features = ["max_level_info", "release_max_level_info"]
