[package]
name = "roseline-web"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
license = "Apache-2.0"
readme = "README.md"

build = "build.rs"

[dependencies.actors]
path = "../actors"

[dependencies.utils]
path = "../utils"

[dependencies.db]
path = "../db"

[build-dependencies]
askama = "0"

[dependencies]
futures = "0"

slog-scope = "4"

mime = "0.3"
num_cpus = "1"

askama = "0"

vndb = "0"

http = "0"
actix = { git = "https://github.com/actix/actix" }

[dependencies.actix-web]
git = "https://github.com/actix/actix-web"
default-features = false
features = ["tls"]

[dependencies.log]
version = "0"
default-features = false
features = ["max_level_info", "release_max_level_warn"]

[dependencies.slog]
version = "2"
default-features = false
features = ["max_level_trace", "release_max_level_info"]
