[package]
name = "roseline-web"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
license = "Apache-2.0"
readme = "README.md"

build = "build.rs"

[dependencies.actors]
path = "../actors"

[dependencies.utils]
path = "../utils"

[dependencies.db]
path = "../db"

[build-dependencies]
askama = "0"

[dependencies]
futures = "0.1"

mime = "0.3"
num_cpus = "1"

askama = "0"

vndb = "0"

http = "0"
bytes = "0"
actix = { git="https://github.com/actix/actix.git" }

serde = "1.0"
serde_derive = "1.0"

[dependencies.actix-web]
git = "https://github.com/actix/actix-web"
default-features = false
features = ["flate2-c", "brotli"]

[dependencies.log]
version = "0"
default-features = false
features = ["max_level_info", "release_max_level_info"]
